vcs/specs/parser/fail/syntax/unmatched_brace_close.vr
// @test: parse-fail
// @level: L0
// @tags: parser, syntax, braces, error
// @description: Test unmatched closing brace detection
// @expected-error: E011

fn test_unmatched() {
    let x = 1;
    }
}
